[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystagram"
version = "0.1.0"
authors = [
  { name="Matthieu THIBAUT", email="matthieu_thibaut@icloud.com" },
]
description = "API wrapper for Instagram APIs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/MatthieuThib/pystagram"
Issues = "https://github.com/MatthieuThib/pystagram/issues"