[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystagram"
version = "0.2"
authors = [
  { name="Matthieu THIBAUT", email="matthieu_thibaut@icloud.com" },
]
description = "API wrapper for Instagram APIs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "meta",
    "facebook",
    "instagram",
    "api",
    "wrapper",
    "pystagram",
    "instagram-api",
    "graph-api",
    "basic-display-api",
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = [
    "twine",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/MatthieuThib/pystagram"
Issues = "https://github.com/MatthieuThib/pystagram/issues"